Fix buttons alignement

--- a/src/css/table.styl
+++ b/src/css/table.styl
@@ -102,7 +102,6 @@
         border-bottom: 0
 
 .table-actions
-  display: inline-table
   min-width: 20px;
 
 .table-responsive
